epserde/tests/fail/drop_memcase.stderr
error[E0505]: cannot move out of `mem_case` because it is borrowed
  --> tests/fail/test.rs:12:10
   |
10 |     let mem_case = unsafe { Vec::<i32>::read_mem(cursor, buffer.len()).unwrap() };
   |         -------- binding `mem_case` declared here
11 |     let v = mem_case.uncase();
   |             -------- borrow of `mem_case` occurs here
12 |     drop(mem_case);
   |          ^^^^^^^^ move out of `mem_case` occurs here
13 |     let _vv = v;
   |               - borrow later used here
